[package]
name = "skywrite"
authors = ["Blooym"]
repository = "https://github.com/Blooym/skywrite"
description = "Automatic submission RSS feed posts to Bluesky."
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
reqwest = { version = "0.12.12" }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
log = "0.4.26"
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive", "env", "string"] }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = "0.4.40"
feed-rs = "2.3.1"
bsky-sdk = "0.1.16"
scraper = "0.23.1"
futures = "0.3.31"
dirs = "6.0.0"

[profile.release]
lto = true
codegen-units = 1
