[package]
name = "skywrite"
authors = ["Blooym"]
repository = "https://github.com/Blooym/skywrite"
description = "Automatic submission RSS feed posts to Bluesky."
version = "0.4.1"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
reqwest = { version = "0.12.24" }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
log = "0.4.28"
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive", "env", "string"] }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
chrono = "0.4.42"
feed-rs = "2.3.1"
bsky-sdk = "0.1.22"
scraper = "0.24.0"
futures = "0.3.31"
dirs = "6.0.0"
image = "0.25.8"

[profile.release]
lto = true
codegen-units = 1
